<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="36dp"
    android:background="@drawable/gradient_background"
    tools:context=".PreviewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/text_view_preview_title"
        android:textColor="#7E57C2"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/text_view_preview_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textColor="#444444"
        android:textSize="20sp"
        tools:text="Preview Message Preview Message Preview Message Preview Message
                    Preview MessagePreview MessagePreview MessagePreview MessagePreview Message
                    Preview MessagePreview MessagePreview MessagePreview MessagePreview Message" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_label_phone"
            android:textColor="#444444"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            tools:text="Number Number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_label_email"
            android:textColor="#444444"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            tools:text="Number Number" />
    </LinearLayout>

</LinearLayout>